Germany and Technology Stuff
- Air Technology Dates Fixed
- Germany Stuff
- Events
- Decisions
- State Work
- Unit Work
- Ideas
- Locals

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -130,7 +130,8 @@
   PB_GER_Construction_Forts:0 "Festung Germanien"
   PB_GER_Construction_Forts_Heart:0 "Das Land der Deutschen"
   PB_GER_More_Rations:0 "War Rationing Plan"
-  PB_GER_Kiel_German_Unrest:0 "The German Independence Movement"
+
+  PB_GER_Kiel_German_Unrest:0 "German Independence Movement"
 
   PB_GER_Rhineland_Unrest_Critical:0 "High Unrest in the Rhineland"
   PB_GER_Rhineland_Unrest_Moderate:0 "Moderate Unrest in the Rhineland"
@@ -805,6 +806,10 @@
   germany.129.d:0 ""
   germany.129.a:0 "We can not reject this offer."
 
+  germany.130.t:0 "Growing Pro-German Movement"
+  germany.130.d:0 ""
+  germany.130.a:0 "We need to be careful."
+
   germany.150.t:0 "A New Neighbour"
   germany.150.d:0 ""
   germany.150.a:0 "We have to stand together against the oncoming storm."
@@ -864,6 +869,12 @@
   PB_GER_treaty_def_rom:0 "§GRomania will very likely always accept the treaty as they direly need to renew their industry and national influence.\nThrough this treaty, the costs Romanian Resources will be greatly reduced for us to buy.§!"
   PB_Cause_Instability_Danish_Holstein:0 "Causing Instablity in [SCH.GetFlag]Schleswig-Holstein"
   PB_GER_holstein_instability:0 "The Governement in Holstein and Copenhagen will experience a rise of German Independence Movements in the next few weeks. With a high chance the Danish Government might respond poorly to these movements and increase their support. When the movement has become too big §Rwe will intervene in the affairs of the Danish State on the behalf of the German Speaking People.§!"
+  PB_Suspiscios_Support_German_Danish:0 "Questionable Support in [SCH.GetFlag]Schleswig-Holstein"
+
+
+  PB_GER_Helping_Polish_Military:0 "Help Rebuilding the [POL.GetFlag]Polish Military"
+  PB_GER_Helping_Polish_Industry:0 "Assist in the building of the [POL.GetFlag]Polish Industry"
+  PB_GER_Polish_German_Alliance:0 "Solidifying the [POL.GetFlag]Polish-[GER.GetFlag]German Alliance"
   
 
   ##########################
