--- a/localisation/PB_Government_l_english.yml
+++ b/localisation/PB_Government_l_english.yml
@@ -277,6 +277,7 @@ SocDev.9.a:0 "Civilization, Ho!"
 PB_Parliamentary_Republic:0 "Parliamentary Republic"
 PB_Parliamentary_Monarchy:0 "Parliamentary Monarchy"
 PB_Absolute_Monarchy:0 "Absolute Monarchy"
+PB_Ultranationalist_Monarchy:0 "Ultranationalist Monarchy"
 PB_Presidential_Dictatorship:0 "Presidential Dictatorship"
 PB_Bourgeois_Dictatorship:0 "Bourgeois Dictatorship"
 PB_Military_Government:0 "Military Government"
@@ -287,7 +288,7 @@ PB_Colonial_Government:0 "Colonial Dictate"
 PB_Puppet_Government:0 "Collaborator Government"
 PB_Workers_Republic:0 "Worker's Republic"
 PB_Tribal_Confederacy:0 "Tribal Confederacy"
-
+PB_Religious_Cult:0 "National Theocracy"
 PB_Celestial_Empire:0 "Celestial Empire"
 
 
