--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -253,6 +253,8 @@
   PB_RUS_Monarchism_Redefined_desc:0 ""
   PB_RUS_Monarchism_Redefined_2:0 "Monarchism Redefined"
   PB_RUS_Monarchism_Redefined_2_desc:0 ""
+  PB_RUS_Monarchism_Redefined_3:0 "Monarchism Redefined"
+  PB_RUS_Monarchism_Redefined_3_desc:0 ""
 
   ##########################
   # EVENTS
@@ -354,6 +356,10 @@
   Russian.23.t:0 "Let Me Buy You A Drink"
   Russian.23.d:0 ""
   Russian.23.a:0 "See, We're Friends"
+
+  Russian.24.t:0 "A New Russia"
+  Russian.24.d:0 ""
+  Russian.24.a:0 "The Time For War Is Soon"
 
 
   ##########################
