German Danish Intercourse Expanded ;D
- state stuff
- locals stuff
- decision stuff
- focus stuff
- events stuff

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -56,7 +56,7 @@
  STATE_55:0 "Hessen"
  STATE_56:0 "Weser-Ems"
  STATE_57:0 "Westfalen"
- STATE_58:0 "Schleswig-Holstein"
+ STATE_58:0 "Holstein"
  STATE_59:0 "Hannover"
  STATE_60:0 "Thüringen"
  STATE_61:0 "Mecklenburg"
@@ -793,7 +793,7 @@
  STATE_792:0 "Darling"
  STATE_793:0 "Aleutian Islands"
  STATE_794:0 "Lika"
- STATE_795:0 "North Schleswig"
+ STATE_795:0 "Schleswig"
  STATE_796:0 "Yootó"
  STATE_797:0 "Arapaho"
  STATE_798:0 "Alta California"
@@ -914,3 +914,4 @@
  STATE_914:0 "Monaco"
  STATE_915:0 "Vatican City"
  STATE_916:0 "Singapore"
+ STATE_917:0 "Hamburg"
