--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -810,6 +810,22 @@
   germany.130.d:0 ""
   germany.130.a:0 "We need to be careful."
 
+  germany.131.t:0 "Governor of Holstein almost shot"
+  germany.131.d:0 ""
+  germany.131.a:0 "Those damn terrorists!"
+ 
+  germany.132.t:0 "German Protest March in Kiel"
+  germany.132.d:0 ""
+  germany.132.a:0 "Crackdown with Force on this ungrateful bastards."
+
+  germany.133.t:0 "The Danish opened fire on peaceful protests."
+  germany.133.d:0 ""
+  germany.133.a:0 "They have lost the right to rule Holstein."
+  
+  germany.134.t:0 "Ultimatum from Germany"
+  germany.134.d:0 ""
+  germany.134.a:0 "We have to give up Holstein."
+
   germany.150.t:0 "A New Neighbour"
   germany.150.d:0 ""
   germany.150.a:0 "We have to stand together against the oncoming storm."
@@ -868,9 +884,10 @@
   PB_Approach_Defeated_Romania_desc:0 "Romania does not have the power or will to fight in another war, however despite this they can still be beneficial for our cause, especially their oil deposits. We can promise to ease the burdens of Hungary from their losses and reperations caused by the war with economic cooperation. This would be the first step of reestablishing friendly relations with Romania and hopefully securing them as an ally in the future."
   PB_GER_treaty_def_rom:0 "§GRomania will very likely always accept the treaty as they direly need to renew their industry and national influence.\nThrough this treaty, the costs Romanian Resources will be greatly reduced for us to buy.§!"
   PB_Cause_Instability_Danish_Holstein:0 "Causing Instablity in [SCH.GetFlag]Schleswig-Holstein"
+  PB_Cause_Instability_Danish_Holstein_desc:0 "Arthur Moeller van den Bruck believes that the German State has the responsibility to protect all German People, even those outside it's borders.The Government believes that the time is right that Holstein should be incorporated into German Nation and leave it's Danish overlord. In order for this to happen several Pro-German Organisations in Holstein will receive direct inofficial support from the German Government."
   PB_GER_holstein_instability:0 "The Governement in Holstein and Copenhagen will experience a rise of German Independence Movements in the next few weeks. With a high chance the Danish Government might respond poorly to these movements and increase their support. When the movement has become too big §Rwe will intervene in the affairs of the Danish State on the behalf of the German Speaking People.§!"
   PB_Suspiscios_Support_German_Danish:0 "Questionable Support in [SCH.GetFlag]Schleswig-Holstein"
-
+  PB_Suspiscios_Support_German_Danish_desc:0 "The Pro-German Organizations in Holstein are somewhat short of money and general equipment. We can help them with that. There were also some orders for security equipment to protect themself... what they do with that equipment is not our concern."
 
   PB_GER_Helping_Polish_Military:0 "Help Rebuilding the [POL.GetFlag]Polish Military"
   PB_GER_Helping_Polish_Industry:0 "Assist in the building of the [POL.GetFlag]Polish Industry"
@@ -1119,6 +1136,8 @@
   GER_Unlock_Europe_Diplomatic_Decisions_Reactionary:0 "§YUnlocks§! £decision_icon_small Decisions to start our involvement in the Balkan Countries"
 
   GER_Polish_Decisions_TT:0 "§YUnlocks§! £decision_icon_small Decisions to strengthen our relationship with the newly independent Poland"
+  
+  PB_GER_Danish_Shot_tt:0 "The Focus "Threatning the Danish" will be §Yunlocked§!."
 
   ##########################
   # COSMETIC TAGS
