did i just add 'The' to most of the DEFs? Yes. do i hate myself? Yes.
seriously add them it just makes stuff better

--- a/localisation/PB_Acadia_l_english.yml
+++ b/localisation/PB_Acadia_l_english.yml
@@ -8,21 +8,21 @@ HEBERT_DESC:0 "Felix Eduard Hébert was born in New Orleans. As the son of a Caj
   ##########################
 
  ACD_ni:0 "Louisiana"
- ACD_ni_DEF:0 "Louisiana"
+ ACD_ni_DEF:0 "The State of Louisiana"
  ACD_rc:0 "Acadia"
- ACD_rc_DEF:0 "Acadia"
+ ACD_rc_DEF:0 "The Anglo-French Trust Territory of Acadia"
  ACD_lb:0 "Acadia"
- ACD_lb_DEF:0 "Acadia"
+ ACD_lb_DEF:0 "The Anglo-French Trust Territory of Acadia"
  ACD_ss:0 "Acadia"
- ACD_ss_DEF:0 "Acadia"
+ ACD_ss_DEF:0 "The Anglo-French Trust Territory of Acadia"
  ACD_jc:0 "Acadia"
- ACD_jc_DEF:0 "Acadia"
+ ACD_jc_DEF:0 "The Anglo-French Trust Territory of Acadia"
  ACD_an:0 "Acadia"
- ACD_an_DEF:0 "Acadia"
+ ACD_an_DEF:0 "The Anglo-French Trust Territory of Acadia"
  ACD_ds:0 "Acadia"
- ACD_ds_DEF:0 "Acadia"
+ ACD_ds_DEF:0 "The Anglo-French Trust Territory of Acadia"
  ACD_cn:0 "Acadia"
- ACD_cn_DEF:0 "Acadian"
+ ACD_cn_DEF:0 "The Anglo-French Trust Territory of Acadia"
  ACD_ni_ADJ:0 "Louisianian"
  ACD_rc_ADJ:0 "Acadian"
  ACD_lb_ADJ:0 "Acadian"
