German Colonial Stuff
- look up the changelog im too tired to write all those many changes down

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -296,10 +296,11 @@
   PB_GER_Empire_Management_Africa_Sudwest_Buyout:0 "The Bechuanaland Buyout"
   PB_GER_Empire_Management_Africa_South_Africa_Intervention_Reconstruction:0 "Defending the Border"
   PB_GER_Empire_Management_Africa_South_Africa_Army:0 "A Professional African Army"
-  PB_GER_Empire_Management_South_Africa_Chaos:0 "Chaos in South Africa"
+  PB_GER_Empire_Management_South_Africa_Colony_with_Potential:0 "A Colony with Great Potential"
   PB_GER_Empire_Ready_for_the_Worst:0 "An Empire ready for the Worst"
+  PB_GER_Empire_Management_Africa_South_Africa_Infrastructure:0 "Establish a functioning railroad network"
   PB_GER_Empire_Management_Africa_South_Africa_Intervention_Reinforcement:0 "Reinforcing Südwestafrika"
-  PB_GER_Empire_Management_Africa_Baule_Autonomy:0 "A Colony with Great Potential"
+  PB_GER_Empire_Management_Africa_Baule_Autonomy:0 "The Rubber Basket of the Empire"
   PB_GER_Empire_Management_Africa_Baule_Settlement:0 "Increase the Plantations"
   PB_GER_Empire_Management_Sudafrica:0 "Protecting Südwestafrika"
 
@@ -309,6 +310,7 @@
   PB_GER_Empire_Management_Asia_Root_Out_Fili:0 "Root out Filipino Resistance"
   PB_GER_Empire_Management_Asia_Reestablish_Stability:0 "Regaining Stability in the East"
   PB_GER_Empire_Management_Asia_Demands_French_Australia:0 "Demand Loyalty from the French Australians"
+  PB_GER_Empire_Management_Asia_Demands_French_Australia_desc:0 "Tensions in the Republic of Australie have been rising without stop and have started to worry us. With the likelyhood of a another war with France rising it is likely to assume that the French Australians will again join their side. We would like to prevent that from happening, preferably without the means of force. They will receive a proposal where they receive the Port of Philippe and Van Diemensland in exchange of joining our side in the upcoming conflict. In case of great contributions to the war effort they will also be able to regain Neu-Schlesien faster."
   PB_GER_Empire_Management_Asia_Qingdao_Industry:0 "Investments in Qingdao"
   PB_GER_Empire_Management_Asia_Filipino_Insurrection:0 "Send Donitz Reinforcements"
   PB_GER_Empire_Management_Asia_Chinese_Civil_War:0 "Reinforce the Qingdao Port"
@@ -567,7 +569,7 @@
   germany.19.a:0 "How strange."
 
   germany.20.t:0 "French Forces cross the Border"
-  germany.20.d:0 ""
+  germany.20.d:0 "It has begun.\n\nWe have received several reports that the French Troops have crossed border checkpoints and started fighting local forces.\n\nThis is a declaration of war. Furthermore our border guards in the East detail that several Russian troop movements towards the border have been spotted. It is likely to be assumed that Russia will truly join France as an ally in this war.\n\nWe can only pray that this war will not be as catastrophic as the last one."
   germany.20.a:0 "Mobilize the Army!"
 
   germany.21.t:0 "The French are on the Move"
@@ -825,6 +827,27 @@
   germany.134.t:0 "Ultimatum from Germany"
   germany.134.d:0 ""
   germany.134.a:0 "We have to give up Holstein."
+
+  germany.135.t:0 "The Danish Give up Holstein"
+  germany.135.d:0 ""
+  germany.135.a:0 "Another victory for Germany."
+
+  germany.136.t:0 "A Proposal from Germany"
+  germany.136.d:0 ""
+  germany.136.a:0 "Let us set aside our differences."
+  germany.136.b:0 "We shall never work with you!"
+
+  germany.137.t:0 "Australie accepts the Proposal!"
+  germany.137.d:0 ""
+  germany.137.a:0 "This time we will fight together."
+
+  germany.138.t:0 "Australie rejects our Proposal!"
+  germany.138.d:0 ""
+  germany.138.a:0 "Inform Dönitz."
+
+  germany.139.t:0 "Australie joins our Pact"
+  germany.139.d:0 ""
+  germany.139.a:0 "Le Frère let's fight together again!"
 
   germany.150.t:0 "A New Neighbour"
   germany.150.d:0 ""
@@ -1100,6 +1123,8 @@
   PB_GER_RED_POLITICS:0 "§RSozialistischer Bund§! has won the 1933 Elections"
   PB_GER_YELLOW_POLITICS:0 "§YUnabhängige Demokratische Partei§! has won the 1933 Elections"
   PB_GER_BROWN_POLITICS:0 "§LDeutscher Volksbund§! has won the 1933 Elections"
+
+  french_austra_tension:0 "Rising Tensions in the §YRepublic of Australie§!"
   
   PB_GER_TT_Centralization:0 "§YThe effects of Unrest in the Volksstaten will be §! §Greduced.§! "
   GER_PB_Tooltip_Costs:0 "The Decision Cost, to reduce Unrest in the Volksstaaten, will be §Greduced and made all the same.§!"
