MORE GERMAN COLONIAL COOM
- yeah

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -298,7 +298,7 @@
   PB_GER_Empire_Management_Africa_South_Africa_Army:0 "A Professional African Army"
   PB_GER_Empire_Management_South_Africa_Colony_with_Potential:0 "A Colony with Great Potential"
   PB_GER_Empire_Ready_for_the_Worst:0 "An Empire ready for the Worst"
-  PB_GER_Empire_Management_Africa_South_Africa_Infrastructure:0 "Establish a functioning railroad network"
+  PB_GER_Empire_Management_Africa_South_Africa_Infrastructure:0 "Establish a functioning Railroad network"
   PB_GER_Empire_Management_Africa_South_Africa_Intervention_Reinforcement:0 "Reinforcing Südwestafrika"
   PB_GER_Empire_Management_Africa_Baule_Autonomy:0 "The Rubber Basket of the Empire"
   PB_GER_Empire_Management_Africa_Baule_Settlement:0 "Increase the Plantations"
@@ -833,7 +833,7 @@
   germany.135.a:0 "Another victory for Germany."
 
   germany.136.t:0 "A Proposal from Germany"
-  germany.136.d:0 ""
+  germany.136.d:0 "It seems like that the Germans are putting us under pressure to decide on which side we want to be.\n\nRather then continue the status quo where they continue to subjugate us, they offer us the return of the Port of Philippe, Van Diemensland and potentially Neu Schlesien. In exchange we would have to join their side against the French and Russians.\n\nWhile some people see this as chance to bring back our country and guarentee its future a lot of people are still hostile towards the Germans and rather advocate to join the French side in the upcoming conflict.\n\nWhat will our answer be?"
   germany.136.a:0 "Let us set aside our differences."
   germany.136.b:0 "We shall never work with you!"
 
