God Bless Siberia

--- a/localisation/PB_Hungary_l_english.yml
+++ b/localisation/PB_Hungary_l_english.yml
@@ -35,6 +35,8 @@
   PB_HUN_German_Eco_Treaty:0 "German Economic Treaty"
   #temporary here until we have serbian locals
   PB_ROM_German_Eco_Treaty:0 "German Economic Treaty"
+
+  HUN_Danube_PR:0 "Danubian Peasants And Workers Republic"
   
   ##########
   #Decisions
