--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -211,7 +211,6 @@
   # MINISTERS/LEADERS/TRAITS
   ##########################
   
-  PB_Lost_Son:0 "The Lost Tsarevich"
   POLITICS_Nicholas_II_DESC:0 "§YBorn:§!18/3/1868\n\n§YTsar Nicholas§! II has lost all hope and lust for life. Nicholas spends his days resting Vacant and Broken on the Imperial Throne letting his court and country decay apart from his seething hatred for his former allies who he blames for all his tragedies.\n\nAs a result the political situation of the Russian Empire is unstable and weak and a simple flick could collapse the entire nation into degeneracy. Russia needs a strong, confident, and ambitious leader if she is to remain united, and feared.\n\nThe harshest of days are ahead for Russia and one wrong step will spell the end of the so called "§YEmpire Of The Slavs§!"\n\n§RThe German and British dogs will pay the ultimate price for their actions§!" 
   PB_Okhrana_Connections:0 "Okhrana Connections"
   RUS_Chubar:0 "Vlas Chubar"
@@ -227,19 +226,24 @@
   RUS_Lavr_Kornilov_SIM:0 "Lavr Kornilov"
   RUS_Grigori_Rasputin:0 "Grigori Rasputin"
 
+  PB_Iron_Will:0 "Iron Will"
+  PB_The_Eternal_Tsar:0 "Eternal Tsar"
+  PB_The_Peoples_Queen:0 "The People's Queen"
+  PB_Puppet_Queen:0 "Puppet Queen"
+
   ##########################
   # IDEAS
   ##########################
 
   PB_RUS_aftermath_of_the_nationalist_revolts:0 "Aftermath of the Nationalist Revolts"
-  PB_RUS_aftermath_of_the_nationalist_revolts_desc:0 "The Nationalist Revolts of the 1920s have forever damned Russia; any dreams of a united slavic peoples has gone down the drain, for now. While the Prussians, Poles, Finnish, Balts and Caucasians all enjoy nominal "independence" there is a clear motive by the Russian state to fully reintegrate theses divided territories.\n\nWhile the Germans may have demanded that autonomy be granted to these newly birthed lands such demands were enforced in a time where Russia was weak, that is no longer the case. While Frankfurt and London may cry independence there is little they can truly do now. "
+  PB_RUS_aftermath_of_the_nationalist_revolts_desc:0 "The Nationalist Revolts of the 1920s have forever damned Russia; any dreams of a united slavic peoples has gone down the drain, for now. While the Prussians, Poles, Finnish, Balts and Caucasians all enjoy nominal "independence" there is a clear motive by the Russian state to fully reintegrate theses divided territories.\n\nWhile the Germans may have demanded that autonomy be granted to these newly birthed lands such demands were enforced in a time where Russia was weak, that is no longer the case. While Frankfurt and London may cry independence there is little they can truly do now. Russia will be united, whether they like it or not."
   PB_RUS_the_plotting_scoundrels:0 "The Plotting Scoundrels"
   PB_RUS_the_plotting_scoundrels_desc:0 ""
   PB_RUS_revenge_for_the_fallen:0 "Revenge For The Fallen"
   PB_RUS_revenge_for_the_fallen_desc:0 ""
   PB_RUS_revenge_for_the_fallen_2:0 "Revenge For The Fallen"
   PB_RUS_revenge_for_the_fallen_2_desc:0 ""
-  PB_RUS_Hunting_The_Black_Hundreds:0 "Hunting The Black Hundreds"
+  PB_RUS_Black_Hundred:0 "Scourage Of The Motherland"
   PB_RUS_Russia_United:0 "Russia United"
   PB_RUS_Bloated_Military:0 "Bloated Military"
   PB_RUS_An_Army_With_A_State:0 "An Army With A State"
@@ -412,6 +416,16 @@
   PB_RUS_Holy_Russia_United_desc:0 ""
   PB_RUS_Kirill:0 "Kirill"
   PB_RUS_Kirill_desc:0 ""
+  PB_RUS_One_Leader_One_Russia:0 "One Leader One Russia"
+  PB_RUS_One_Leader_One_Russia_desc:0 ""
+  PB_RUS_Speak_With_Tesla:0 "Speak With Tesla"
+  PB_RUS_Autocratic_Campaigns:0 "Autocratic Campaigns"
+  PB_RUS_Tend_To_The_Masses:0 "Tend To The Masses"
+  PB_RUS_Emperor_Of_All_The_Russias:0 "Emperor Of All The Russias"
+  PB_RUS_Encourage_Revanchist_Ideals:0 "Encourage Revanchist Ideals"
+  PB_RUS_Baptism_By_Fire:0 "Baptism By Fire"
+  PB_RUS_Purge_Corruption:0 "Purge Corruption"
+  PB_RUS_Bourgeois_Dealings:0 "Bourgeois Dealings"
 
   PB_RUS_Alexei:0 "Alexei"
   PB_RUS_Alexei_desc:0 ""
