Italy Victory Points Fixed 1

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -78,7 +78,7 @@
   PB_GER_Mittleuropa_Leader:0 "Leader of Mittleuropa"
   PB_GER_Reconstruction_Funding:0 "Reconstruction Funding"
   PB_GER_Reinforcement_SDW:0 "German Reinforcement"
-  PB_GER_Baule_Exploitation:0 "Baule Exploitation"
+  PB_GER_Empire_Management_Africa_Western_Ports:0 "Improve the Western Ports"
   PB_GER_Reinforcement_DAS:0 "Reinforcements from Germany"
   PB_GER_ROC_Military_Mission:0 "Sino-German Military Mission"
   PB_GER_Major_Chinese_Investments:0 "Major Investments in China"
@@ -287,11 +287,11 @@
   PB_GER_Agriculture_Mechanization:0 "Mechanization of Agriculture"
   PB_GER_Central_European_Pillar:0 "The Central Pillar of Europe"
 
-  PB_GER_Empire_Management:0 "Büro für kaiserliche Verwaltung"
+  PB_GER_Empire_Management:0 "Büro für Konoliale Verwaltung"
   PB_GER_Empire_Management_Africa:0 "Development in Central Africa"
   PB_GER_Empire_Management_Africa_desc:0 ""
-  PB_GER_Empire_Management_Africa_Develop_Baule:0 "Encourage Settlements in Gabon"
-  PB_GER_Empire_Management_Africa_Central_Infrastructure:0 "Kongo-Kamerun Railway"
+  PB_GER_Empire_Management_Africa_Develop_Baule:0 "Increase Rubber Output in the Congo"
+  PB_GER_Empire_Management_Africa_Central_Infrastructure:0 "Gabon-Zansibar Railway"
   PB_GER_Empire_Management_Africa_Togoland_Coffee:0 "Making the Zanzibar Islands truly German"
   PB_GER_Empire_Management_Africa_Sudwest_Buyout:0 "The Bechuanaland Buyout"
   PB_GER_Empire_Management_Africa_South_Africa_Intervention_Reconstruction:0 "Defending the Border"
