--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -211,7 +211,7 @@
   # MINISTERS/LEADERS/TRAITS
   ##########################
   
-  POLITICS_Nicholas_II_DESC:0 "§YBorn:§!18/3/1868\n\n§YTsar Nicholas§! II has lost all hope and lust for life. Nicholas spends his days resting Vacant and Broken on the Imperial Throne letting his court and country decay apart from his seething hatred for his former allies who he blames for all his tragedies.\n\nAs a result the political situation of the Russian Empire is unstable and weak and a simple flick could collapse the entire nation into degeneracy. Russia needs a strong, confident, and ambitious leader if she is to remain united, and feared.\n\nThe harshest of days are ahead for Russia and one wrong step will spell the end of the so called "§YEmpire Of The Slavs§!"\n\n§RThe German and British dogs will pay the ultimate price for their actions§!" 
+  POLITICS_Nicholas_II_DESC:0 "§YBorn:§!18/3/1868\n\n§YTsar Nicholas§! II has lost all hope and lust for life. Nicholas spends his days resting Vacant and Broken on the Imperial Throne letting his court and country decay apart from his seething hatred for his former allies who he blames for all his tragedies. Like an uncaring father he remains complaciant for those that openly harass the very people he was sworn to protect. His recent acquisition of Typhus has only worsened this terrible habit of political negligence and many have questioned his effectiveness as a Tsar although seemingly the waiting list for heir of the Russian Empire shortens almost daily. If his health continues to worsen as is the case currently then Russia's early start to the 20th century will be one ruled by multiple hands, that all share the same blood, potentially.\n\nAlexei is the official successor to the throne although many have raised their voice in protest for such a fact. Alternatively there is Alexandra, his wife, who is far more popular with her liberalist views which have unsurprisingly caused much provocation between the Tsar and her. There is also Kirill, the first cousin of Nicholas II; a renowned aristocrat with many political connections makes Kirill the most likely out of the three main candidates to ascend to power. Whatever the case may be for the Empire one thing for sure is that whoever succeeds the ailing tyrant will define Russia for the rest of the century.\n\n§RLike a phoenix arison from hell Russia, and all those responsible for its pain will suffer in the most unholiest of ways.§!" 
   PB_Okhrana_Connections:0 "Okhrana Connections"
   RUS_Chubar:0 "Vlas Chubar"
   RUS_Matskevich:0 "Vladimir Matskevich"
@@ -414,6 +414,7 @@
   PB_RUS_The_Officer_Putsch_desc:0 ""
   PB_RUS_Holy_Russia_United:0 "Holy Russia United"
   PB_RUS_Holy_Russia_United_desc:0 ""
+
   PB_RUS_Kirill:0 "Kirill"
   PB_RUS_Kirill_desc:0 ""
   PB_RUS_One_Leader_One_Russia:0 "One Leader One Russia"
@@ -426,6 +427,14 @@
   PB_RUS_Baptism_By_Fire:0 "Baptism By Fire"
   PB_RUS_Purge_Corruption:0 "Purge Corruption"
   PB_RUS_Bourgeois_Dealings:0 "Bourgeois Dealings"
+  PB_RUS_The_Rich_Get_Richer:0 "The Rich Get Richer"
+  PB_RUS_Let_The_Wealthy_Have_Their_Say:0 "Let The Wealthy Have Their Say"
+  PB_RUS_indiscriminate_Politics:0 "Indiscriminate Politics"
+  PB_RUS_Concessions_To_The_Nobility:0 "Concessions To The Nobility"
+  PB_RUS_End_The_Union_Threat:0 "End The Union Threat"
+  PB_RUS_Work_Will_Set_You_Free:0 "Work Will Set You Free"
+  PB_RUS_The_Business_Coup:0 "The Business Plot"
+
 
   PB_RUS_Alexei:0 "Alexei"
   PB_RUS_Alexei_desc:0 ""
