--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -126,6 +126,10 @@
   PB_GER_Rearmament:0 "Rearmament"
   PB_GER_Philip_Compensation:0 "Philippines Self Governing Support"
 
+  PB_GER_Europa_Spies:0 "Europa Abteilung"
+  Hamburg_Membership:0 "Hamburg Membership"
+  Hamburg_Membership_1:0 "Hamburg Membership"
+
   PB_GER_Relief_Packages:0 "Relief Packages"
   PB_GER_Construction_Forts:0 "Festung Germanien"
   PB_GER_Construction_Forts_Heart:0 "Das Land der Deutschen"
@@ -1129,6 +1133,8 @@
   PB_GER_TT_Centralization:0 "§YThe effects of Unrest in the Volksstaten will be §! §Greduced.§! "
   GER_PB_Tooltip_Costs:0 "The Decision Cost, to reduce Unrest in the Volksstaaten, will be §Greduced and made all the same.§!"
 
+  GER_Invite_to_Hamburg:0 "£decision_icon_small Decisions will be §Yunlocked§! to invite European Nations to the Hamburg League\n§ROur Fight against Tryranny begins here!§!"
+
   GER_Secret_War_Economy:0 "£decision_icon_small Decisions will be §Yunlocked§! to prepare Rathenau's Ideal Total War System\n§RDo not underestimate the German Economy!§!"
 
   GER_Sudwestafrika_Elite_Division_tt:0 "§YSüdwestafrika will receive an elite division to bolster their fighting strength.§! "
@@ -1231,3 +1237,5 @@ POLITICS_KARL_DONITZ_DESC:0 ""The North German does not go in for extremes. He h
 DAS_prussian_admiral:0 "The Prussian Admiral"
 DAS_prussian_admiral_desc:0 "The Prussian Admiral"
 
+####
+HAMBURG_LEAGUE:0 "Hamburg League"
