--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -30,6 +30,7 @@
   ##########################
   #POP HAPPINESS
   ##########################
+
   PB_RUS_Nobility_Satisfaction_Growth_1.5_tt:0 "Nobility Satisfaction Growth Will Change By §G+1.5§!"
   PB_RUS_Nobility_Satisfaction_Growth_1_tt:0 "Nobility Satisfaction Growth Will Change By §G+1§!"
   PB_RUS_Nobility_Satisfaction_Growth_0.5_tt:0 "Nobility Satisfaction Growth Will Change By §G+0.5§!"
@@ -365,6 +366,14 @@
   Russian.24.d:0 ""
   Russian.24.a:0 "The Time For War Is Soon"
 
+  Russian.25.t:0 "Normality In An Insane World"
+  Russian.25.d:0 ""
+  Russian.25.a:0 "A Safe Choice It Seems"
+
+  Russian.26.t:0 "Money Makes The World Go Round"
+  Russian.26.d:0 ""
+  Russian.26.a:0 "More Power To The Wealthy?"
+
 
   ##########################
   # GUI DESCRIPTIONS
@@ -552,6 +561,8 @@
   PB_RUS_Barbarians_Of_Russia_tt:0 "\n§gAlexei and the Black Hundreds will torment Russia's very soul, warping it into a nightmarish state ruled with an iron grip.§!\n\n§RIt Is Highly Recommended You Don't Play This Path§!"
   PB_RUS_BH_Military_Integration_tt:0 "Ethnic Cohesion Maximum Value §R-10§!"
   PB_RUS_Maintaining_The_Status_Quo_tt:0 "\n§gAlexei will continue in his father's footsteps and bring a new age of Russian imperialism to the continent, unhampered by leftist political thought and doctrines.§!"
+  PB_RUS_One_Leader_One_Russia_tt:0 "\n§gKirill will proclaim a new century for Russia, one full of economic profitability and revanchist ideals.§!"
+  PB_RUS_Bourgeois_Dealings_tt:0 "\n§gThe Russian aristocracy and bourgeois will be granted greater power in political affairs, the ideas of unhampered capitalism are soon to be realized.§!"
 
   #######################
   # PARTIES
