Peace Deal Work and such

--- a/localisation/PB_Warcrimes_l_english.yml
+++ b/localisation/PB_Warcrimes_l_english.yml
@@ -27,6 +27,14 @@
   chembio.5.d:0 "The deployment of biological weapons in our neighbors has gotten out of hand. We've begun to receive reports from throughout the nation of people coming down ill, with many requiring hospitalization. Whatever engineered nightmare our neighbors have been afflicted with has spread to our own homeland.\n\nFor the time being, we've quarantined the worst affected areas but the illness will likely persist for some time. Instances of rioting and looting in affected areas are not entirely uncommon and will be handled to the best of our ability. As it stands right now, the best we can do is hunker down and hope to ride out the storm."
   chembio.5.a:0 "Get this under control!"
 
+  chembio.6.t:0 "Biological Weapons Outbreak Escalates"
+  chembio.6.d:0 "Following a recent attack by our enemy with biological weapons, we've begun to receive reports of outbreaks within the civilian population. With the currently ongoing conflicts in our nation, efforts to contain the spread have been disrupted, and the disease now threatens to spread across the border into neighboring countries."
+  chembio.6.a:0 "Oh shit."
+
+  chembio.7.t:0 "Enemy Biological Attack"
+  chembio.7.d:0 "Our soldiers at the front are suddenly falling ill after a series of enemy attacks. Upon investigation, it appears the illness is being caused by a weaponized illness deployed by one of our enemies against us.\n\nWe've quarantined the affected soldiers, but it may not be enough to keep this illness from spreading beyond the affected frontline or to our neighbors."
+  chembio.7.a:0 "Oh no."
+
   ##########################
   # DECISIONS
   ##########################
@@ -65,9 +73,9 @@
   ##########################
   PB_Choking_Agents_Deployed:0 "Choking Chemical Weapons in Use"
   PB_Nerve_Agents_Deployed:0 "Nerve Agent Weapons in Use"
-  PB_Biological_Agents_Deployed:0 "Enemy Biological Attack"
-  PB_Advanced_Biological_Agents_Deployed:0 "Advanced Enemy Biological Attack"
-  PB_Advanced_Biological_Agents_Secondary_Infection:0 "Major Biologically Engineered Disease Outbreak"
+  PB_Biological_Agents_Deployed:0 "Severe Disease Outbreak"
+  PB_Advanced_Biological_Agents_Deployed:0 "Severe Disease Outbreak"
+  PB_Advanced_Biological_Agents_Secondary_Infection:0 "Severe Disease Outbreak"
 
   ##########################
   # PROVINCE MODIFIERS
@@ -90,7 +98,7 @@
 
   chemweapons_mindbreaker:0 "Mindbreaker Bomb"
 
-  bioweapons_anthrax:0 "Anthrax Outbreak"
+  bioweapons_anthrax_modifier:0 "Anthrax Outbreak"
 
   bioweapons_smallpox_modifier:0 "Smallpox Outbreak"
 
