--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -260,7 +260,8 @@
   PB_RUS_Monarchism_Redefined_2_desc:0 ""
   PB_RUS_Monarchism_Redefined_3:0 "Monarchism Redefined"
   PB_RUS_Monarchism_Redefined_3_desc:0 ""
-
+  PB_RUS_Landship_Production_Cuts:0 "Landship Production Cuts"
+  
   ##########################
   # EVENTS
   ##########################
