RUS Stuff and French loc

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -261,6 +261,9 @@
   PB_RUS_Monarchism_Redefined_3:0 "Monarchism Redefined"
   PB_RUS_Monarchism_Redefined_3_desc:0 ""
   PB_RUS_Landship_Production_Cuts:0 "Landship Production Cuts"
+  PB_RUS_Unrelenting_Offensives_Idea:0 "Unrelenting Offensives"
+  PB_RUS_Decentralize_High_Command_Idea:0 "Decentralize High Command Idea"
+  PB_RUS_Envelope_and_Liquidate_Idea:0 "Envelope And Liquidate"
   
   ##########################
   # EVENTS
