--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -237,8 +237,8 @@
   ##########################
 
   PB_RUS_aftermath_of_the_nationalist_revolts:0 "Aftermath of the Nationalist Revolts"
-  PB_RUS_aftermath_of_the_nationalist_revolts_desc:0 "The Nationalist Revolts of the 1920s have forever damned Russia; any dreams of a united slavic peoples has gone down the drain, for now. While the Prussians, Poles, Finnish, Balts and Caucasians all enjoy nominal "independence" there is a clear motive by the Russian state to fully reintegrate theses divided territories.\n\nWhile the Germans may have demanded that autonomy be granted to these newly birthed lands such demands were enforced in a time where Russia was weak, that is no longer the case. While Frankfurt and London may cry independence there is little they can truly do now. Russia will be united, whether they like it or not."
-  PB_RUS_the_plotting_scoundrels:0 "The Plotting Scoundrels"
+  PB_RUS_aftermath_of_the_nationalist_revolts_desc:0 "The Nationalist Revolts of the 1920s have forever damned Russia; any dreams of a united slavic peoples has gone down the drain, for now. While the Prussians, Poles, Finnish, Balts and Caucasians all enjoy nominal "independence" there is a clear motive by the Russian state to fully reintegrate theses divided territories. While the Germans may have demanded that autonomy be granted to these newly birthed lands such demands were enforced in a time where Russia was weak, that is no longer the case. While Frankfurt and London may cry independence there is little they can truly do now. Russia will be united, whether they like it or not."
+  PB_RUS_the_plotting_scoundrels:0 "Political Violence"
   PB_RUS_the_plotting_scoundrels_desc:0 ""
   PB_RUS_revenge_for_the_fallen:0 "Revenge For The Fallen"
   PB_RUS_revenge_for_the_fallen_desc:0 ""
@@ -556,6 +556,12 @@
   PB_RUS_POL_Independence_War_desc:0 "\n\n\n\n\n\nPoland has finally decided to rid itself of Russian control, declaring total independence as a result of Russia's continued russification campaigns. While this will be no easy  fight the Polish people remain hoepeful. Moscow now has an emergency on their hands, and it could quickly spiral out of control."
   POL_Peace_Timeout:0 "Poland Forever"
   Russia_Will_Sign_A_Peace_With_Poland:0 "Russia Will Sign A Peace With Poland"
+  PB_RUS_Imperial_Military:0 "The Imperial Military"
+  PB_RUS_Imperial_Military_desc:0 "\n\n\n\n\n\nThe Imperial Military desperately needs an overhaul if it is to be on par with the likes of Great Britain and Germany. Whilst we may have the upper hand with electrical based offensive technologies our motorization sectors are comparatively lacking. Additionally our Navy and Airforce are rather small and outdated and are in need of further modernisation efforts. The price may be a large one to pay but these needed changes are important to the survival of Russia.\n\nThese decisions will work in conjuction with the §YManaging The Military§!  mechanic."
+  PB_RUS_Recruit_New_Generals:0 "Recruit New Generals"
+  PB_RUS_Innovative_New_Technologies:0 "Innovative New Technologies"
+  PB_RUS_Expand_Military_Production:0 "Expand Military Production"
+  PB_RUS_Funds_For_The_Loyal:0 "Funds For The Loyal"
 
   ########################## 
   # FLAGS
@@ -579,6 +585,10 @@
   PB_RUS_Maintaining_The_Status_Quo_tt:0 "\n§gAlexei will continue in his father's footsteps and bring a new age of Russian imperialism to the continent, unhampered by leftist political thought and doctrines.§!"
   PB_RUS_One_Leader_One_Russia_tt:0 "\n§gKirill will proclaim a new century for Russia, one full of economic profitability and revanchist ideals.§!"
   PB_RUS_Bourgeois_Dealings_tt:0 "\n§gThe Russian aristocracy and bourgeois will be granted greater power in political affairs, the ideas of unhampered capitalism are soon to be realized.§!"
+  PB_RUS_The_New_Hussars_tt:0 "\nIf you have researched Basic Medium Landships then two §YExperimental§! Medium Landship divisions will be mobolized"
+  PB_RUS_The_Imperial_Army_tt:0 "Unlocks £decision_icon_small §YDecisions§! for the Imperial Army"
+  PB_RUS_The_Imperial_Navy_tt:0 "Unlocks £decision_icon_small §YDecisions§! for the Imperial Navy"
+  PB_RUS_The_Imperial_Airforce_tt:0 "Unlocks £decision_icon_small §YDecisions§! for the Imperial Airforce"
 
   #######################
   # PARTIES
