russia peasents mechanic pt1

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -202,6 +202,20 @@
   RUS_Ethnic_Cohesion_0.04_increase:0 "Ethnic Cohesion will increase by §G+4%§!"
   RUS_Ethnic_Cohesion_0.06_increase:0 "Ethnic Cohesion will increase by §G+6%§!"
 
+  ###PEASENT SHIT
+  PB_RUS_recruit_workers_for_civs:0 "Recruit Workers For Civilian Industry"
+  PB_RUS_recruit_workers_for_civs_desc:0 ""
+  PB_RUS_recruit_workers_for_mils:0 "Recruit Workers For Military Industry"
+  PB_RUS_recruit_workers_for_mils_desc:0 ""
+  PB_RUS_recruit_workers_for_infra:0 "Recruit Workers For Infrastructure Projects"
+  PB_RUS_recruit_workers_for_infra_desc:0 ""
+  PB_RUS_recruit_peasents_to_work_field:0 "Recruit Peasents to the Workfield"
+  PB_RUS_recruit_peasents_to_work_field_desc:0 ""
+  RUS_percent_of_workers_minus_three_percent:0 "§ROur percent of workers will decrease by 3%§!"
+  RUS_percent_of_workers_plus_three_percent:0 "§GOur percent of workers will increase by 3%§!"
+  RUS_number_of_peasents_minus_three_percent:0 "§ROur percent of peasents will decrease by 3%§!"
+
+  
   ##########################
   #Top Bar
   ##########################
