me when russian slavery: nig...

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -203,6 +203,8 @@
   RUS_Ethnic_Cohesion_0.06_increase:0 "Ethnic Cohesion will increase by §G+6%§!"
 
   ###PEASENT SHIT
+  PB_RUS_peasent_worker_decisions:0 "Peasent-Worker Divide"
+  PB_RUS_peasent_worker_decisions_desc:0 "The Peasent-Worker Divide in Russia is deeepening. We need fucking workers, also Bernie's dick is small :trollface:.\n\nOur Current Percent of Workers is §Y[?RUS_number_of_workers]%§!\nOur Current Percent of Peasents is §Y[?RUS_number_of_peasents]%§!"
   PB_RUS_recruit_workers_for_civs:0 "Recruit Workers For Civilian Industry"
   PB_RUS_recruit_workers_for_civs_desc:0 ""
   PB_RUS_recruit_workers_for_mils:0 "Recruit Workers For Military Industry"
@@ -214,7 +216,8 @@
   RUS_percent_of_workers_minus_three_percent:0 "§ROur percent of workers will decrease by 3%§!"
   RUS_percent_of_workers_plus_three_percent:0 "§GOur percent of workers will increase by 3%§!"
   RUS_number_of_peasents_minus_three_percent:0 "§ROur percent of peasents will decrease by 3%§!"
-
+  PB_RUS_at_least_three_workers:0 "§YWe have at least 3% workers§!"
+RUS_we_have_no_more_unemployed_workers:0 "§YWe have less than 50% workers§!"
   
   ##########################
   #Top Bar
